[package]
name = "overflowing_mul"
version = "0.1.1"
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/Rinrin0413/overflowing-mul.git"
readme = "README.md"
edition = "2021"

[features]
en = []
ja = []

[dependencies]
rand = "0.8"
colored = "2"
toml = "0.7.4"